--- a/motor/index.html
+++ b/motor/index.html
@@ -8,7 +8,7 @@
 		<title> My first game - Menu </title>
 	</head>
 	<body>
-		<p class="menu-object" id="title">Memory menu</p>
+		<p class="titolmenu">Memory menu</p>
 		<button class="menu-object" onclick="phaser_game()"> 
 			Phaser Game 
 		</button>
