--- a/motor/html/options.html
+++ b/motor/html/options.html
@@ -22,10 +22,11 @@
 				<label for="hard">Hard</label>
 			</div>
 			<button class="menu-object" v-on:click="save"> Save </button>
-			<button class="menu-object" v-on:click="discard"> Discard </button>
+			<button class="menu-object" onclick=loadpage("../")> Discard </button>
 		</div>
 	</body>
 	<script src="https://cdn.jsdelivr.net/npm/vue@2.6.14"></script>
 	<script src="../js/options.js"></script>
+	<script src ="../js/loader.js"></script>
 </html>
 
