--- a/motor/index.html
+++ b/motor/index.html
@@ -13,7 +13,7 @@
 			Phaser Game 
 		</button>
 		<button class="menu-object" onclick="start_game()"> 
-			Start Game 
+			Start Game(s'ha de treure) 
 		</button>
 		<button class="menu-object" onclick="load()"> 
 			Load Game 
