--- a/motor/index.html
+++ b/motor/index.html
@@ -9,9 +9,9 @@
 	</head>
 	<body>
 		<p class="titolmenu">Memory menu</p>
-		<button class="menu-object" onclick="phaser_game()"> 
-			Phaser Game 
-		</button>
+		<a class="menu-object" href="./html/gamemode.html">
+			Play
+		</a>
 		<button class="menu-object" onclick="start_game()"> 
 			Start Game(s'ha de treure) 
 		</button>
