--- a/motor/html/gamemode.html
+++ b/motor/html/gamemode.html
@@ -12,7 +12,7 @@
     <button class="menu-object" onclick="phaser_game()">
         GameMode1 (Classic)
     </button>
-    <button class="menu-object" onclick="">
+    <button class="menu-object" onclick="phaser_game2()">
         GameMode2 (Survival)
     </button>
 <body>
