--- a/motor/html/gamemode.html
+++ b/motor/html/gamemode.html
@@ -8,13 +8,15 @@
     <script src="../js/menu_controller.js"></script>
     <title> Game Modes </title>
 </head>
-    <p class="titolmenu">Game modes for Memory</p>
-    <button class="menu-object" onclick="phaser_game()">
+    <h1 class="neon">Game <br> Modes </h1>
+    <div class="button" onclick="phaser_game()">
         GameMode1 (Classic)
-    </button>
-    <button class="menu-object" onclick="phaser_game2()">
+    </div>
+    <div class="button" onclick="phaser_game2()">
         GameMode2 (Survival)
-    </button>
+    </div>
+
+    <div class="button" onclick=loadpage("../index.html")>Go To Menu</div>
 <body>
 
 </body>
