--- a/motor/html/phasergame2.html
+++ b/motor/html/phasergame2.html
@@ -11,5 +11,7 @@
         <body>
             <div id = "game_area"></div>
         </body>
+    <div class="button" onclick=loadpage("../index.html")>Go To Menu</div>
+
 </html>
 
