--- a/motor/index.html
+++ b/motor/index.html
@@ -8,22 +8,20 @@
 		<title> My first game - Menu </title>
 	</head>
 	<body>
-		<p class="titolmenu">Memory menu</p>
-		<a class="menu-object" href="./html/gamemode.html">
+	<h1 class="neon">Memory<br> Menu </h1>
+		<div class="button" onclick="game_mode()">
 			Play
-		</a>
-		<button class="menu-object" onclick="start_game()"> 
-			Start Game(s'ha de treure) 
-		</button>
-		<button class="menu-object" onclick="load()"> 
+		</div>
+		<div class="button" onclick="score()">
+			Score
+		</div>
+		<div class="button" onclick="load()">
 			Load Game 
-		</button>
-		<button class="menu-object" onclick="options()"> 
+		</div>
+		<div class="button" onclick="options()">
 			Options 
-		</button>
-		<button class="menu-object" onclick="exit()"> 
-			Exit 
-		</button>
+		</div>
+	<div class="button" onclick="exit()">Exit</div>
 	</body>
 </html>
 
