--- a/motor/html/phasergame.html
+++ b/motor/html/phasergame.html
@@ -11,5 +11,8 @@
 	<body>
 		<div id = "game_area"> </div>
 	</body>
+	<div class="button" onclick=loadpage("../index.html")>Go To Menu</div>
+
+
 </html>
 
