--- a/motor/html/score.html
+++ b/motor/html/score.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div id="ranquing">
-    <h1 class="neon">Score <br> Ranking </h1>
+    <h1 class="neon">Ranking <br> Survival </h1>
 
     <ol v-for="(score, indx) in guardats">
         <p id="rank">{{indx+1}}<br> {{score}}</p>
