--- a/motor/index.html
+++ b/motor/index.html
@@ -15,7 +15,7 @@
 		<div class="button" onclick="score()">
 			Score
 		</div>
-		<div class="button" onclick="load()">
+		<div class="button" onclick="menu_load()">
 			Load Game 
 		</div>
 		<div class="button" onclick="options()">
