--- a/motor/html/phasergame.html
+++ b/motor/html/phasergame.html
@@ -6,7 +6,7 @@
 		<script src="../js/loader.js"></script>
 		<script src="../js/game.js"></script>
 		<script src="../js/phasergame_controller.js"></script>
-		<title>GameMode1-Classic</title>
+		<title>GameMode1-Classic</title> //html amb el canvas del primer mode de joc de phaser
 	</head>
 	<body>
 		<div id = "game_area"> </div>
